# pyNeuTube

./: .gitignore  CITATION.cff  Cython_setup.py  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test_batch_progress.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
docs/: tutorial.ipynb  tutorial.md
examples/: overlay_reference_reconstruction.py  reference_volume_trace.swc  reference_volume_trace_fix.swc  trace_reference_volume.py
examples/data/: reference_neutube.swc
pyneutube/: __init__.py  cli.py  io.py  processing.py  tracing.py  visualization.py
pyneutube/core/: README.MD  __init__.py  math_utils.py  neighbors.py
pyneutube/core/io/: __init__.py  image_parser.py  swc_parser.py  vaa3d_accel.c  vaa3d_accel.pyx
pyneutube/core/processing/: __init__.py  filtering.py  local_maximum.c  local_maximum.pyx  morphology.py  sampling.c  sampling.pyx  segmentation.py  swc_utils.py  transform.c  transform.pxd  transform.pyx
pyneutube/core/visualization/: __init__.py  debug_vis.py  image_enhancer.py
pyneutube/tracers/: __init__.py
pyneutube/tracers/pyNeuTube/: README.MD  __init__.py  chain_utils.py  chains_to_morphology.py  config.py  filters.c  filters.pyx  geometry.py  geometry_accel.c  geometry_accel.pyx  neuron_structures.py  optimization.py  optimization_accel.c  optimization_accel.pyx  pipeline.py  seeds.py  seg_utils.c  seg_utils.pyx  shortest_path_accel.c  shortest_path_accel.pyx  stack_graph.py  stack_graph_utils.c  stack_graph_utils.pyx  tracing.py  tracing_base.py  tracing_utils.py
tools/dev/: benchmark_sampling.py  cache_reference_postprocess.py  convert_reference_formats.py  profile_reference_pipeline.py  regenerate_cython_sources.py  smoke_imports.py
tools/release/: build_wheels_conda.py
