[build-system]
requires = ["setuptools>=77", "wheel", "numpy>=1.24,<2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyneutube"
dynamic = ["version"]
description = "Python reimplementation of the NeuTube tracing workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PyNeuTube contributors" },
]
keywords = ["neuron tracing", "microscopy", "swc", "neuroscience", "image analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24,<2",
  "scipy>=1.10",
  "tifffile>=2024.2.12",
  "networkx>=3.2",
  "tqdm>=4.66",
  "fast-histogram>=0.14",
  "edt>=2.4",
  "matplotlib>=3.8",
  "nibabel>=5.3",
  "pynrrd>=1.0",
]

[project.urls]
Homepage = "https://github.com/YunZhixi98/pyNeuTube"
Source = "https://github.com/YunZhixi98/pyNeuTube"
Issues = "https://github.com/YunZhixi98/pyNeuTube/issues"

[project.scripts]
pyneutube-trace = "pyneutube.cli:main"

[tool.setuptools.dynamic]
version = { attr = "pyneutube._version.__version__" }


[tool.setuptools]
include-package-data = false
packages = [
  "pyneutube",
  "pyneutube.core",
  "pyneutube.core.io",
  "pyneutube.core.processing",
  "pyneutube.tracers",
  "pyneutube.tracers.pyNeuTube",
]

[tool.setuptools.package-data]
"pyneutube.core.processing" = ["*.pyx", "*.pxd"]
"pyneutube.tracers.pyNeuTube" = ["*.pyx"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.py[cod]", "*.c", "*.cpp"]

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "integration: requires local reference assets",
]
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["pyneutube"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_i686"
archs = ["auto64"]
build-verbosity = 1
test-command = "python -c \"import pyneutube, pyneutube.cli\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
